--- a/.travis.yml
+++ b/.travis.yml
@@ -1,5 +1,12 @@
 language: cpp
 compiler: gcc
 
-install: make tests
-script: ./TestMain.exe
+install:
+    - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
+    - sudo apt-get update -qq
+    - sudo apt-get install -qq g++-7
+    - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 90
+    - make tests
+
+script:
+    - ./TestMain.exe
