--- a/.travis.yml
+++ b/.travis.yml
@@ -1,11 +1,19 @@
+dist: trusty
+sudo: required
+
 language: cpp
 compiler: gcc
 
+addons:
+    apt:
+        sources:
+            ubuntu-toolchain-r/test
+        packages:
+            g++-7
+
 install:
-    - sudo add-apt-repository -y ppa:ubuntu-toolchain-r/test
-    - sudo apt-get update -qq
-    - sudo apt-get install -qq g++-7
     - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 90
+    - g++ --version
     - make tests
 
 script:
