Fixes travis sintax

--- a/.travis.yml
+++ b/.travis.yml
@@ -7,9 +7,9 @@ compiler: gcc
 addons:
     apt:
         sources:
-            ubuntu-toolchain-r/test
+            - ubuntu-toolchain-r-test
         packages:
-            g++-7
+            - g++-7
 
 install:
     - sudo update-alternatives --install /usr/bin/g++ g++ /usr/bin/g++-7 90
